tests/purs/failing/CoercibleKindMismatch.out
Error found:
in module [33mMain[0m
at tests/purs/failing/CoercibleKindMismatch.purs:15:17 - 15:23 (line 15, column 17 - line 15, column 23)

  Could not match kind
  [33m      [0m
  [33m  Type[0m
  [33m      [0m
  with kind
  [33m             [0m
  [33m  t29 -> Type[0m
  [33m             [0m

while solving type class constraint
[33m                                                                    [0m
[33m  Prim.Coerce.Coercible (Proxy @(t0 -> Type) (Unary @t0))           [0m
[33m                        (Proxy @(t1 -> t2 -> Type) (Binary @t1 @t2))[0m
[33m                                                                    [0m
while checking that type [33mforall (a :: Type) (b :: Type). Coercible @Type a b => a -> b[0m
  is at least as general as type [33mProxy @(t0 -> Type) (Unary @t0) -> Proxy @(t1 -> ...) (Binary @t1 @t2)[0m
while checking that expression [33mcoerce[0m
  has type [33mProxy @(t0 -> Type) (Unary @t0) -> Proxy @(t1 -> ...) (Binary @t1 @t2)[0m
in value declaration [33munaryToBinary[0m

where [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type
      [33mt2[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/KindsDoNotUnify.md for more information,
or to contribute content related to this error.

